Ajuste para que a classe ErrorResponse seja gerada pelo openapi.yml
